# MSPM0G_Brushed_DC_MotorDriver

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  build.bat  ozoe.jdebug  ozone.jdebug  readme.md
Core/Inc/: freertos_manager.h  rtos_mspm.h
Core/Src/: freertos_manager.c  main.c  rtos_mspm.c
HostTool/: README.md  motor_host_tool.py
Middlewares/CMSIS_RTOS/: croutine.c  event_groups.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
Middlewares/CMSIS_RTOS/Config/: FreeRTOSConfig.h
Middlewares/CMSIS_RTOS/include/: FreeRTOS.h  StackMacros.h  atomic.h  croutine.h  deprecated_definitions.h  event_groups.h  list.h  message_buffer.h  mpu_prototypes.h  mpu_syscall_numbers.h  mpu_wrappers.h  newlib-freertos.h  picolibc-freertos.h  portable.h  projdefs.h  queue.h  semphr.h  stack_macros.h  stdint.readme  stream_buffer.h  task.h  timers.h
Middlewares/CMSIS_RTOS/portable/GCC/ARM_CM0/: mpu_wrappers_v2_asm.c  port.c  portasm.c  portasm.h  portmacro.h
Middlewares/CMSIS_RTOS/portable/MemMang/: heap_1.c  heap_2.c  heap_3.c  heap_4.c  heap_5.c
User/Algorithm/Inc/: abstract_queue.h  crc_ref.h  pid.h
User/Algorithm/Src/: abstract_queue.c  crc_ref.c  pid.c
User/Application/Inc/: comm_task.h  detect_task.h  key_manager.h  motor_module_manager.h  motor_runner.h  motor_task.h
User/Application/Src/: comm_task.c  detect_task.c  key_manager.c  motor_module_manager.c  motor_runner.c  motor_task.c
User/BSP/Inc/: bsp_can.h  bsp_mspm0g_dma.h  bsp_mspm0g_gpio.h  bsp_mspm0g_i2c.h  bsp_mspm0g_it.h  bsp_mspm0g_tim_base.h  bsp_mspm0g_usart.h  bsp_time.h
User/BSP/Src/: bsp_can.c  bsp_mspm0g_dma.c  bsp_mspm0g_gpio.c  bsp_mspm0g_i2c.c  bsp_mspm0g_it.c  bsp_mspm0g_tim_base.c  bsp_mspm0g_usart.c  bsp_time.c
User/Config/Inc/: mcu_config.h  mcu_device.h
User/Config/Src/: mcu_device.c
User/Device/Inc/: at24cxx.h  brushed_motor.h  comm_key.h  comm_led.h  qei_encoder.h
User/Device/Src/: at24cxx.c  brushed_motor.c  comm_key.c  comm_led.c  qei_encoder.c
User/Protocol/Inc/: master_slave_codec.h  motor_can_control.h  motor_uart_control.h
User/Protocol/Src/: master_slave_codec.c  motor_can_control.c  motor_uart_control.c
cmake/: gcc-arm-none-eabi.cmake
cmake/easy_frame/: CMakeLists.txt
sysconfig/: motor.syscfg  ti_msp_dl_config.c  ti_msp_dl_config.h
